[package]
name = "soloqbot"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "soloqbot"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
dotenv = "0.15.0"
futures = "0.3.26"
redis = {version="0.22.3",features=["tokio-comp"]}
riven = {version="2.12.0", features=["tracing"]}
tokio = {version="1.25.0",features=["full"]}
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
twilight-cache-inmemory = "0.15.1"
twilight-gateway = "0.15.1"
twilight-http = "0.15.1"
twilight-model = "0.15.1"
twilight-util = {version="0.15.1",features=["builder"]}
